# bridge

./: .gitignore  README.md  testing
agent/: README.md  index.js  package-lock.json  package.json  webpack.config.js
agent/framework/: chain.test.js  chainSync.js
agent/framework/chain/: agent_abstract.js  chain_abstract.js
agent/framework/comm/: lib.js  utils.js
agent/framework/config/: config.json  moduleConfig.js
apps/app_nftMarket/: package.json
contracts/contracts_merkle_proofs/: package.json
contracts/contracts_soroban/: 10_optimizing_nft.sh  11_deploy_optimizing_nft.sh  20_optimizing_nft_market.sh  21_deploy_nft_market.sh  30_optimizing_message_bridge.sh  31_deploy_message_bridge.sh  Cargo.toml
contracts/contracts_soroban/contracts/nft_market/: Cargo.toml
contracts/contracts_soroban/contracts/nft_market/src/: contract.rs  gate_way.rs  lib.rs  orderKey.rs  order_count.rs  peer_chain.rs  storage_types.rs  test.rs
contracts_rust/: README.md
contracts_solidity/: README.md
contracts_solidity/message-bridge-contracts/: LICENSE  README.md
contracts_solidity/nft-market-contracts/: package.json
deployment/: Dockerfile
deployment/deploy_agent/: Dockerfile  README
deployment/deploy_scanService_nftMarket/: Dockerfile  README
deployment/script/: buildDocker.sh  deploy_agent.sh  startAgent.sh
docs/: eventModel-table-doc.md  event_example.json
relayers/crossRoute/: package-lock.json  package.json
services/routeService_multiSig/: package.json  readme.txt
services/scanService_nftMarket/: mongoTable.txt  package.json  readme.txt
(+280 files in other folders)
