[package]
name = "nft_market"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
nft_interface = { workspace = true }
message_bridge_interface = { workspace = true }
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


